Add year query parameter to Swagger API and 'swag fmt' & 'swag init'
