# controllers/delegation.go
@@ -24,8 +24,9 @@ type delegationController struct{}
 //	@Tags			delegations
 //	@Accept			json
 //	@Produce		json
-//	@Success		200	{array}		dto.DelegationResponse
-//	@Failure		500	{object}	errorhandling.SimpleErrorMessage
+//	@Param			year	query		string	false	"Filter results by year"
+//	@Success		200		{array}		dto.DelegationResponse
+//	@Failure		500		{object}	errorhandling.SimpleErrorMessage
 //	@Router			/xtz/delegations [get]
 func (controller delegationController) ListDelegations(context *gin.Context) {
 	var queryParameters ListDelegationsQueryParameters
