# docs/swagger.json
@@ -49,6 +49,14 @@
                     "delegations"
                 ],
                 "summary": "List Delegations",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Filter results by year",
+                        "name": "year",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
